better-routes/tests/trybuild/fail/should-fail-without-name.rs
use better_routes::routes;
routes! {}
fn main() {}
